--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,7 +2,7 @@
 
 data:
   image_dir: "data/raw/all_images"
-  label_file: "/home/boukhari/projects/dental_image_project/data/processed/dental_images.csv"
+  label_file: "data/raw/dental_images.csv"
   image_size: [224, 224]
   batch_size: 64
   validation_split: 0.2
